// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monomer Group should render correct with title prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1jn33hb"
      >
        <div
          class="css-a0lsh8"
        >
          <span>
            Mock title
          </span>
        </div>
        <div
          class="css-u8jo8f"
        >
          <div
            class="css-ryv5uk"
            data-testid="R"
          >
            <span>
              R
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-17atjlm"
            data-testid="A"
          >
            <span>
              m
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-kvk3yi"
            data-testid="D"
          >
            <span>
              d
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-ryv5uk"
            data-testid="R"
          >
            <span>
              ar
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-1tniqtk"
            data-testid="L"
          >
            <span>
              Ld
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1jn33hb"
    >
      <div
        class="css-a0lsh8"
      >
        <span>
          Mock title
        </span>
      </div>
      <div
        class="css-u8jo8f"
      >
        <div
          class="css-ryv5uk"
          data-testid="R"
        >
          <span>
            R
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-17atjlm"
          data-testid="A"
        >
          <span>
            m
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-kvk3yi"
          data-testid="D"
        >
          <span>
            d
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-ryv5uk"
          data-testid="R"
        >
          <span>
            ar
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-1tniqtk"
          data-testid="L"
        >
          <span>
            Ld
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Monomer Group should render correct without title prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1jn33hb"
      >
        <div
          class="css-u8jo8f"
        >
          <div
            class="css-ryv5uk"
            data-testid="R"
          >
            <span>
              R
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-17atjlm"
            data-testid="A"
          >
            <span>
              m
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-kvk3yi"
            data-testid="D"
          >
            <span>
              d
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-ryv5uk"
            data-testid="R"
          >
            <span>
              ar
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-1tniqtk"
            data-testid="L"
          >
            <span>
              Ld
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1jn33hb"
    >
      <div
        class="css-u8jo8f"
      >
        <div
          class="css-ryv5uk"
          data-testid="R"
        >
          <span>
            R
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-17atjlm"
          data-testid="A"
        >
          <span>
            m
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-kvk3yi"
          data-testid="D"
        >
          <span>
            d
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-ryv5uk"
          data-testid="R"
        >
          <span>
            ar
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-1tniqtk"
          data-testid="L"
        >
          <span>
            Ld
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
